# patlab

./: .gitignore  404.html  CHANGELOG.md  LICENSE  PyPI-readme.md  README.md  index.html  pyproject.toml  sitemap.xml
api/: index.html
docs/: mkdocs.yml
docs/docs/: api.md  getting-started.md  index.md
docs/docs/patterns/: pyramid.md  square.md  triangle.md
docs/site/: 404.html  index.html  search.json  sitemap.xml
docs/site/api/: index.html
docs/site/getting-started/: index.html
docs/site/patterns/pyramid/: index.html
docs/site/patterns/square/: index.html
docs/site/patterns/triangle/: index.html
docs/site/search/: search_index.json
docs/site/stylesheet/: extra.css
getting-started/: index.html
patlab/: __init__.py  basic.py  diamond.py  pyramid.py  rectangle.py  right_triangle.py  square.py
patlab.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
patterns/pyramid/: index.html
patterns/square/: index.html
patterns/triangle/: index.html
search/: search_index.json
tests/: test_basic.py
