[project]
name = "patlab"
version = "0.1.0"
description = "Simple pattern generation library for Python"
authors = [{ name = "Sayam", email = "sayampradhan07@outlook.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/sayampradhan/patlab"
"Repository" = "https://github.com/sayampradhan/patlab"
"GitHub" = "https://github.com/sayampradhan"