[project]
name = "patlab"
version = "0.2.13"
description = "Simple pattern generation library for Python"
authors = [{ name = "Sayam", email = "sayampradhan07@outlook.com" }]
readme = "PyPI-readme.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/sayampradhan/patlab"
"Repository" = "https://github.com/sayampradhan/patlab"
"GitHub" = "https://github.com/sayampradhan"